--- a/news-app-client/package.json
+++ b/news-app-client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "jwt-decode": "^4.0.0",
@@ -14,6 +16,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.1.0",
     "web-vitals": "^2.1.4"
   },
